syntax = "proto2";

option go_package = "github.com/RoboCup-SSL/ssl-game-controller/internal/app/api";

import "github.com/RoboCup-SSL/ssl-game-controller/proto/ssl_game_controller_state.proto";
import "github.com/RoboCup-SSL/ssl-game-controller/proto/ssl_game_controller_change.proto";

message Output {
    optional State match_state = 1;
    optional GameControllerState gc_state = 2;
}

message GameControllerState {
    repeated string auto_refs_connected = 1;
    map<int32, bool> team_connected = 2;
    map<int32, bool> team_connection_verified = 3;
}

message Input {
    optional Change change = 1;
}